
0.4.3:
    * FIX: proper US firmware check
    * FIX: got rid bookmarks file caching (thanks gra3l)
    * FIX: install.sh could not make reboot TV after proper flashing on pure TVs giving garbage on console instead
    * FIX: install.sh mem requirements lowered for 3D TVs where's less available mem
    * FIX: install.sh kill konfabulator before installation to get more free memory
    * ADD: new NetCast web browser based links (from SmartTV NetCast 2.0) in Internet Browser page - 132 links currently compared to 68 before (by nicola_12345)

0.5.0:
    * FIX: workaround for network shares invisible dirs (thanks xren)
    * FIX: upgrade from zip file on USB storage device
    * FIX: ywe first time configuration
    * FIX: abc.net.au link fix
    * ADD: experimental support for SmartTV models
    * ADD: build and installation scripts can now handle 2011 BCM model images
    * ADD: support for KR 2010 BCM models
    * ADD: /scripts/readspeedtest.sh script from mmm4m5m for read transfer rate measurement (thanks lprot for measurement hint)
    * ADD: storing rootfs and lginit backups at installation into /home/backup/{rootfs,lginit}.bck files
    * ADD: web proxy script for JavaScript code injection to improve Internet Browser (work in progress)
    * ADD: NVRAM commandline editor
    * ADD: get_RELEASE_info.sh script for getting LG firmware version
    * ADD: NetCast links icons preloading at boot - much quicker links.html page load time
    * ADD: mtdinfo.sh script for getting info about mtd partitions by mmm4m5m
    * ADD: yavido service alternate player (prototype for now)
    * CHANGE: /etc/rc.d/rc.mount rewrite for more flexible partitions handling
    * CHANGE: improved cramfs xip partitions check before mounting - to prevent kernel crash in case of corrupted lgapp partition (RELEASE)
    * CHANGE: partition mounting based on partition names instead of static mtd numbers - this should improve compatibility even with unknown models